// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#dynamodb mcp-server-connection generator > should add dynamodb dev dependency to mcp-server dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp",
  "root": "packages/my-mcp",
  "targets": {
    "mcp-server-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#dynamodb mcp-server-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp",
  "root": "packages/my-mcp",
  "targets": {
    "custom-server-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
